# stock_price_analyze-Backend

./: .gitignore  README.md  app.py  package-lock.json  profile.out  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
analysis/: additional_metrics.py  chart_builder.py  daily_scan.py  data_fetcher.py  data_fetcher_context.py  data_fetcher_financials.py  data_fetcher_fundamentals.py  data_fetcher_fundamentals_extract.py  data_fetcher_fundamentals_helpers.py  data_fetcher_fundamentals_loader.py  data_fetcher_fundamentals_metrics.py  data_fetcher_market.py  data_fetcher_utils.py  data_preparation.py  event_detection.py  event_detection_analysis.py  financials_alpha.py  financials_helpers.py  financials_yfinance.py  fundamentals.py  get_summary.py  indicators.py  metrics_calculation.py  opening_range_breakout.py  peer_data.py  summary.py  summary_cache.py  summary_core.py  summary_peer_utils.py  summary_peers.py  test.py  trade_entry_evaluation.py  world_markets.py
backtest_strategies/: bb_sr_strategies.py  data_fetcher.py  date_utils.py  logging_config.py  metrics.py  orb_strategies.py  param_grid.py  runner.py  test.py
database/: add_logo_column.py  add_price_movement_columns.py  connection.py  create_financial_statements_table.py  create_lists_table.py  create_ticker_table.py  create_user_table.py  financials_repository.py  test.py  ticker_repository.py  user_repository.py
routes/: Option_price_ratio_routes.py  alerts_routes.py  backtest_routes.py  financials_routes.py  orb_routes.py  summary_cache.py  summary_routes.py  summary_tasks.py  ticker_logo_routes.py  tickers_routes.py  user_routes.py  world_markets_routes.py
tasks/: daily_scan_tasks.py  orb_scheduler.py  textbelt_utils.py  watchlist_cache_tasks.py
tests/: QQQ_price_movement.csv  conftest.py  test_additional_metrics.py  test_alerts.py  test_app.py  test_backtest_data_fetcher.py  test_backtest_strategies.py  test_chart_builder.py  test_daily_scan_tasks.py  test_data_fetcher.py  test_data_fetcher_context.py  test_data_fetcher_exports.py  test_data_fetcher_financials.py  test_data_fetcher_fundamentals_api.py  test_data_fetcher_fundamentals_extract.py  test_data_fetcher_fundamentals_helpers.py  test_data_fetcher_fundamentals_loader.py  test_data_fetcher_fundamentals_metrics.py  test_data_fetcher_market.py  test_data_fetcher_utils.py  test_data_preparation.py  test_event_detection.py  test_financials_yfinance_quarter_info.py  test_fundamentals.py  test_indicators.py  test_opening_range_breakout.py  test_option_price_ratio.py  test_routes.py  test_summary.py  test_summary_core.py  test_summary_peer_utils.py  test_summary_peers_cache.py  test_ticker_repository.py  test_tickers.py  test_trade_entry_evaluation.py  test_user_repository.py  test_user_routes.py  test_watchlist_cache_tasks.py
tests/fixtures/: record_data_fetcher_fixtures.py
tests/fixtures/data_fetcher/: alpha_vantage_balance_sheet.json  alpha_vantage_cash_flow.json  alpha_vantage_income_statement.json
utils/: auth.py  serialization.py  ttl_cache.py
