# ────────────────────────────────────────────────────────────────
# Build system
# ────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

# ────────────────────────────────────────────────────────────────
# Project metadata
# ────────────────────────────────────────────────────────────────
[project]
name            = "stock_price_analyze_backend"
version         = "0.1.0"
description     = "A backend for stock price analysis"
readme          = "README.md"
requires-python = ">=3.9"

authors = [
  {name = "Your Name", email = "you@example.com"}
]

# Core runtime dependencies
dependencies = [
  "pandas>=1.0",
  "numpy>=1.26,<2.0",   # stays on 1.x for ta-lib compatibility
  "ta-lib==0.6.4",
  "requests>=2.25",
  "sqlalchemy>=1.4"
]

# Optional extras (e.g. `pip install .[test]`)
[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

# ────────────────────────────────────────────────────────────────
# Package discovery (new setuptools ≥69 schema)
# ────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = [
  "analysis*",
  "database*",
  "routes*",
  "tasks*",
  "utils*"
]
exclude = [
  "tests*",
  "env*",
  "__pycache__",
  ".github*",
  ".pytest_cache*"
]

# Treat the top-level app.py as an importable module named “app”
[tool.setuptools]
py-modules = ["app"]
