# ────────────────────────────────────────────────────────────────
# Build system
# ────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

# ────────────────────────────────────────────────────────────────
# Project metadata
# ────────────────────────────────────────────────────────────────
[project]
name            = "stock_price_analyze_backend"
version         = "0.1.0"
description     = "A backend for stock price analysis"
readme          = "README.md"
requires-python = ">=3.9"

authors = [
  {name = "Your Name", email = "you@example.com"}
]

# Core runtime dependencies
dependencies = [
  "APScheduler>=3.11.0",
  "Flask>=3.1.0",
  "Flask-Cors>=5.0.0",
  "PyJWT>=2.10.1",
  "alpha_vantage>=3.0.0",
  "bcrypt>=4.3.0",
  "finnhub-python>=2.4.22",
  "joblib>=1.5.0",
  "numpy>=1.26,<2.0",   # stays on 1.x for ta-lib compatibility
  "pandas>=2.2.3",
  "pandas_market_calendars>=5.0.0",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.0.1",
  "pytz>=2024.2",
  "requests>=2.32.3",
  "ta-lib==0.6.4",
  "yfinance>=1.0",
]

# Optional extras (e.g. `pip install .[test]`)
[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=4.0"
]

# ────────────────────────────────────────────────────────────────
# Package discovery (new setuptools ≥69 schema)
# ────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = [
  "analysis*",
  "database*",
  "routes*",
  "tasks*",
  "utils*"
]
exclude = [
  "tests*",
  "env*",
  "__pycache__",
  ".github*",
  ".pytest_cache*"
]

# Treat the top-level app.py as an importable module named “app”
[tool.setuptools]
py-modules = ["app"]
